# OriGearEngine

./: CMakeLists.txt  OriGearEngine.hpp  README.md
include/: clock.hpp  core.hpp  engine.hpp  renderer.hpp  surface.hpp  texture.hpp  util.hpp  window.hpp
include/abs/: destroyable.hpp
include/media/: font.hpp  image.hpp  media.hpp  texture.hpp
src/: CMakeLists.txt  clock.cpp  core.cpp  engine.cpp  renderer.cpp  surface.cpp  texture.cpp  util.cpp  window.cpp
src/abs/: destroyable.cpp
src/media/: CMakeLists.txt  font.cpp  image.cpp  texture.cpp
